# OpenFlow

./: .gitignore  DESIGN_INTEGRATION.md  OpenFlow_Brand_Book.html  PROJECT_PLAN.md  README.md  RECONCILIATION.md  ai.py  audio.py  cli.py  daemon.py  dictionary.py  entitlements.plist  history.py  hotkeys.py  launcher.py  openflow.spec  openflow_logger.py  paste.py  pyproject.toml  requirements.txt  sounds.py  state.py  transcribe.py  tray.py
assets/logo/: icon.icns
openflow/: .env.example  .env.test  daemon.py  history.py  hotkeys.py  openflow.spec  pyproject.toml  requirements.txt  tray.py
openflow/openflow/: __main__.py  ai.py  audio.py  config.py  daemon.py  dictionary.py  hotkeys.py  prompts.py  transcribe.py  tray.py
openflow/scripts/: install_macos.sh
scripts/: build_dmg.sh  install_macos.sh
tests/: test_dictionary.py  test_pipeline_smoke.py  test_whisper_opts.py
ui/: branding.py  dict_editor.py  edit_overlay.py  fonts.py  history.py  icons.py  onboarding.py  recording_pill.py  settings.py  stylesheet.py  toast.py  tokens.py  vibrancy.py
ui/settings_tabs/: __init__.py  _common.py  advanced.py  ai.py  general.py  hotkeys.py  language.py
